[gd_scene load_steps=10 format=3 uid="uid://bit0i4rljxkde"]

[ext_resource type="Script" path="res://GUI/User Interface/UI_menus/options_menu.gd" id="1_20msk"]
[ext_resource type="Texture2D" uid="uid://de7ahrckvdrf4" path="res://Assets/Parallax/skybg.png" id="2_7lhsi"]
[ext_resource type="Texture2D" uid="uid://bqhq5upn518vt" path="res://Assets/Parallax/bg0.png" id="3_mrswd"]
[ext_resource type="Texture2D" uid="uid://ctj7buktwyi8s" path="res://Assets/Parallax/bg1.png" id="4_rdkkt"]
[ext_resource type="Texture2D" uid="uid://dyq3qagtcjytv" path="res://Assets/Parallax/bg2.png" id="5_x4776"]
[ext_resource type="Texture2D" uid="uid://bcvje32iymegi" path="res://Assets/Parallax/bg3.png" id="6_mfyvg"]
[ext_resource type="FontFile" uid="uid://cqia8tbmpi3ec" path="res://Misc/ChiKareGo2.ttf" id="7_nw5i8"]
[ext_resource type="Theme" uid="uid://dap64i2o0ns0x" path="res://Misc/Theme.tres" id="8_dn5yc"]

[sub_resource type="GDScript" id="GDScript_1o5ty"]
script/source = "extends ParallaxBackground

@export var scrolling_speed = 250
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	scroll_offset.x -= scrolling_speed*delta
"

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20msk")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource("GDScript_1o5ty")

[node name="Background" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("2_7lhsi")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(960, 540)
scale = Vector2(6.53061, 6.75)
texture = ExtResource("3_mrswd")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("4_rdkkt")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("5_x4776")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(960, 540)
scale = Vector2(6.531, 6.75)
texture = ExtResource("6_mfyvg")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_left = 296.0
offset_top = 328.0
offset_right = 1621.0
offset_bottom = 429.0

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("7_nw5i8")
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 469.0
offset_right = 956.0
offset_bottom = 588.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Volume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_dn5yc")
theme_override_constants/outline_size = 3
text = "Volume"

[node name="Input Type" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_dn5yc")
theme_override_constants/outline_size = 3
text = "Input Type"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_dn5yc")
theme_override_constants/outline_size = 3
text = "Back	"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Input Type" to="." method="_on_input_type_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
